<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/onboardingRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/oboarding_main_scene"
>

    <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/slider"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8"/>

    <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
            android:id="@+id/page_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:dotsColor="@color/colorPurple"
            app:dotsStrokeColor="@color/colorPurple"
            app:dotsCornerRadius="8dp"
            app:dotsSize="@dimen/_8sdp"
            app:dotsSpacing="@dimen/_8sdp"
            app:dotsStrokeWidth="1dp"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />


    <com.google.android.material.button.MaterialButton
            android:id="@+id/nextBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton.OnBoardTextButton"
            android:text="@string/next"
            android:layout_marginBottom="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@+id/page_indicator"
            app:layout_constraintHorizontal_chainStyle="spread"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/startBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:backgroundTint="@color/colorPurple"
            app:cornerRadius="24dp"
            android:paddingStart="@dimen/_30sdp"
            android:paddingEnd="@dimen/_30sdp"
            android:paddingTop="@dimen/_16sdp"
            android:paddingBottom="@dimen/_16sdp"
            android:text="@string/get_started"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/page_indicator"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/skipBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton.OnBoardTextButton"
            android:text="@string/skip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/page_indicator"
            android:layout_marginBottom="@dimen/_16sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"/>
</androidx.constraintlayout.motion.widget.MotionLayout>