<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@drawable/splash_screen"
    android:gravity="center"
    android:layout_gravity="center">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingTop="@dimen/_15sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <RelativeLayout
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:textSize="@dimen/_20sdp"
                    android:textColor="@color/colorPurple"
                    android:text="@string/already_nhave_an_naccount"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_register_hero"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:cardBackgroundColor="@color/white"
                android:gravity="center"
                android:elevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_height="match_parent">

                    <TextView
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/colorBlueMidnight"
                        android:text="@string/login_to_have_a_perfect_holiday"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:textColorHint="@color/colorPurple"
                        android:hint="@string/enter_phone">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextEmail"
                            android:maxLines="1"
                            style="@style/modifiedEditText"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:textColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnLoginButton"
                        style="@style/loginButton"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_15sdp" />

                    <TextView
                        style="@style/parent"
                        android:id="@+id/tvRegister"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/colorPurple"
                        android:textSize="@dimen/_12sdp"
                        android:text="@string/new_user_register_now"
                        android:layout_marginTop="@dimen/_15sdp" />

                    <LinearLayout
                        android:id="@+id/llOtherView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:weightSum="3"
                        android:layout_below="@+id/tvRegister"
                        android:gravity="center"
                        android:layout_marginTop="30dp">

                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:background="@color/colorPurple"
                            android:layout_weight="1.2"/>

                        <TextView
                            style="@style/viewParent.headerText.NoMode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Use other Methods"
                            android:layout_weight=".6"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textAlignment="center"/>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:background="@color/colorPurple"
                            android:layout_weight="1.2"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:visibility="gone"
                        android:layout_below="@+id/llOtherView"
                        android:layout_marginTop="20dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_facebook"/>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_google_plus"
                            android:layout_marginLeft="10dp"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
    <View
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_width="@dimen/_5sdp"
        android:layout_height="match_parent"
        android:background="@drawable/ic_side_bg"/>
    <ImageView
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="30dp"
        android:onClick="onLoginClick"/>
</RelativeLayout>